deployments/terraform/devops/network/nsg-bastion.json
{
  "defaultSecurityRules": [
    {
      "access": "Allow",
      "description": "Allow inbound traffic from all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/defaultSecurityRules/AllowVnetInBound",
      "name": "AllowVnetInBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow inbound traffic from azure load balancer",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "name": "AllowAzureLoadBalancerInBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "AzureLoadBalancer",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all inbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/defaultSecurityRules/DenyAllInBound",
      "name": "DenyAllInBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/defaultSecurityRules/AllowVnetOutBound",
      "name": "AllowVnetOutBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to Internet",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/defaultSecurityRules/AllowInternetOutBound",
      "name": "AllowInternetOutBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all outbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/defaultSecurityRules/DenyAllOutBound",
      "name": "DenyAllOutBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    }
  ],
  "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
  "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast",
  "location": "japaneast",
  "name": "vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-alz-devops-jpe",
  "resourceGuid": "907d74ff-3222-43d5-83bf-4474411d3444",
  "securityRules": [
    {
      "access": "Allow",
      "description": "Allow HTTPs",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowHttpsInBound",
      "name": "AllowHttpsInBound",
      "priority": 110,
      "protocol": "TCP",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "Internet",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "description": "Allow GatewayManager",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowGatewayManager",
      "name": "AllowGatewayManager",
      "priority": 120,
      "protocol": "TCP",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "GatewayManager",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowAzureLoadBalancerInbound",
      "name": "AllowAzureLoadBalancerInbound",
      "priority": 130,
      "protocol": "TCP",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "AzureLoadBalancer",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRanges": ["8080", "5701"],
      "direction": "Inbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowBastionHostCommunicationInbound",
      "name": "AllowBastionHostCommunicationInbound",
      "priority": 140,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRanges": ["22", "3389"],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowSshRdpOutbound",
      "name": "AllowSshRdpOutbound",
      "priority": 110,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "AzureCloud",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowAzureCloudOutbound",
      "name": "AllowAzureCloudOutbound",
      "priority": 120,
      "protocol": "TCP",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRanges": ["8080", "5701"],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowBastionCommunicationOutbound",
      "name": "AllowBastionCommunicationOutbound",
      "priority": 130,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "80",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c8741ced-0c03-4b60-afcb-988d826d0912\"",
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/networkSecurityGroups/vnet-devopstfbe-prod-jpe-ep7w-AzureBastionSubnet-nsg-japaneast/securityRules/AllowHttpOutbound",
      "name": "AllowHttpOutbound",
      "priority": 140,
      "protocol": "TCP",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-alz-devops-jpe",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    }
  ],
  "subnets": [
    {
      "id": "/subscriptions/de2fe723-9f66-4833-b637-ba3b120e3c8f/resourceGroups/rg-alz-devops-jpe/providers/Microsoft.Network/virtualNetworks/vnet-devopstfbe-prod-jpe-ep7w/subnets/AzureBastionSubnet",
      "resourceGroup": "rg-alz-devops-jpe"
    }
  ],
  "tags": {
    "envTag": "prod",
    "projectTag": "devops",
    "purposeTag": "alz"
  },
  "type": "Microsoft.Network/networkSecurityGroups"
}
